Added temp directory for arrow

--- a/README.qmd
+++ b/README.qmd
@@ -18,7 +18,7 @@ The core idea of this package is to not load all results in memory and convert t
 
 These json files are processed further by additional functions and it is planned to make resulting oblects compatible with `openalexR` objects. These are
 
-- `openalexR` `list` type result from `oa_fetch()`
+<!-- - `openalexR` `list` type result from `oa_fetch()` -->
 - `openalexR` `tibble` / `data.frame` type result from `oa_fetch()`
 - `openalexR` snowball `list` as returned by `oa_snowball()`
 
