--- a/inst/Timing.qmd
+++ b/inst/Timing.qmd
@@ -66,7 +66,7 @@ system.time({
     entity = "works",
     options = list(sample = 1000, seed = 1)
   ) |>
-    openalexPro::oa_request(
+    openalexPro::pro_request(
       verbose = TRUE,
       json_dir = "json_1000"
     )
