--- a/inst/compatibility.qmd
+++ b/inst/compatibility.qmd
@@ -3,13 +3,9 @@ title: "Compatibility with `openalexR`"
 format: 
   html:
     toc: true
+    embed-resources: true
 execute: 
   cache: false
-
-vignette: >
-  %\VignetteIndexEntry{Vignette's Title}
-  %\VignetteEngine{quarto::html}
-  %\VignetteEncoding{UTF-8}
 ---
 
 ```{r, include = FALSE}
@@ -28,35 +24,57 @@ One of the aims of this package is compatibility with `openalexR::oa_fetch(outpu
 
 Here we will demonstrte how this can be achieved annd what the differences are. 
 
-For copmparison, we will fetch the results usong `openalexR::fetch()` here:
+
+## Comparison `openalexR::fetch()` and `openalexPro::pro_request()`
+
+First we fetch the works using `openalexR::oa_fetch()`:
 
 ```{r}
 #| label: openalexR_fetch
-oaR <- openalexR::oa_fetch(
-  entity = "works",
-  output = "tibble",
-  title_and_abstract.search = "biodiversity AND conservation AND IPBES",
-) |>
-  dplyr::arrange(id)
+fn <- "compatibility/data/works/oaR.rds"
+if (file.exists(fn)) {
+  oaR <- readRDS(fn)
+} else {
+  oaR <- openalexR::oa_fetch(
+    entity = "works",
+    output = "tibble",
+    title_and_abstract.search = "biodiversity AND conservation AND IPBES",
+  ) |>
+    dplyr::arrange(id)
+  dir.create(
+    dirname(fn),
+    recursive = TRUE
+  )
+  saveRDS(oaR, fn)
+}
 ```
 
-Now we will do the same using `openalexPro::pro_request()`:
+Now we will do the same using `openalexPro::pro_request()`. This involves more steps, but the result should be com[patible:
+
 ```{r}
 #| label: openalexPro_fetch
 #|
 
-corpus <- oa_query(
-  title_and_abstract.search = "biodiversity AND conservation AND IPBES",
-  entity = "works"
-) |>
-  pro_request(
-    verbose = TRUE
+corpus <- file.path("compatibility", "data", "works", "corpus")
+if (!dir.exists(corpus)) {
+  corpus <- oa_query(
+    title_and_abstract.search = "biodiversity AND conservation AND IPBES",
+    entity = "works"
   ) |>
-  json_to_parquet()
+    pro_request(
+      verbose = TRUE,
+    ) |>
+    json_to_parquet(
+      corpus = corpus,
+      delete_json = TRUE
+    )
+}
 
 oaPro <- read_corpus(
   corpus = corpus,
-)
+  return_data = TRUE
+) |>
+  dplyr::arrange(id)
 
 oaPro_comp <- read_corpus(
   corpus = corpus,
@@ -66,42 +84,154 @@ oaPro_comp <- read_corpus(
   dplyr::arrange(id)
 ```
 
-# Comparison
+### Works retrieved (`id`s)
 
-## Works retrieved (works)
-First we check if the same papers are retrieved:
+Works retrieved using `openalexR::oa_fetch()` and not in `openalexPro::pro_request()`:
 
 ```{r}
-identical(
-  setdiff(oaR$id, oaPro_comp$id),
   setdiff(oaR$id, oaPro_comp$id)
-)
 ```
 
+Works retrieved using  `openalexPro::pro_request()` and not in `openalexR::oa_fetch()`:
+
+```{r}
+  setdiff(oaPro_comp$id, oaR$id)
+```
 If `TRUE`, the same works are retrieved.
 
-## Names of Columns
+### Names of Columns
 
 Let's compare the names. The following columns are in both `oaR` and `oaPro_comp`:
 ```{r}
+#| label: columns_in_both
+
+
 intersect(names(oaR), names(oaPro_comp))
 ```
 
 The following are missing from `oaPro_comp`:
 ```{r}
+#| label: columns not_in_oaPro_comp
+
+
 setdiff(names(oaR), names(oaPro_comp))
 ```
 
 and these are missing from `oaR`:
 ```{r}
+#| label: columns not_in_oaR
+
+
 setdiff(names(oaPro_comp), names(oaR))
 ```
 
 
-## Further Comparison
-
-The comparison of structure is difficult at the moment, wherefore we will skip it. Here are just some metrics:
+## Comparison `openalexR::oa_snowball()` and `openalexPro::pro_snowball()`
 
 ```{r}
-waldo::compare(oaR, oaPro_comp)
+
+# Define identifier for keypaper
+identifier <- c("W2741809807", "W2755950973")
+```
+
+First we fetch the works using `openalexR::oa_snowball()`:
+
+```{r}
+#| label: openalexR_oa_snowball
+fn <- file.path("compatibility", "data", "snowball", "snowballR.rds")
+if (file.exists(fn)) {
+  snowballR <- readRDS(fn)
+} else {
+  snowballR <- openalexR::oa_snowball(
+    identifier = identifier,
+    id_type = "original",
+    verbose = TRUE
+  )
+  dir.create(dirname(fn), recursive = TRUE)
+  saveRDS(snowballR, fn)
+}
+
+```
+
+Now we will do the same using `openalexPro::pro_snowball()`.
+
+```{r}
+#| label: openalexPro_pro_snowball
+#|
+
+dn <- file.path("compatibility", "data", "snowball", "snowball")
+if (!dir.exists(dn)) {
+  pro_snowball(
+    identifier = identifier,
+    snowball = dn
+  )
+}
+
+snowballPro <- read_snowball(
+  snowball = dn,
+  return_data = TRUE,
+  comp_mode = FALSE
+)
+
+snowballPro_comp <- read_snowball(
+  snowball = dn,
+  return_data = TRUE,
+  comp_mode = TRUE
+)
+```
+
+### Nodes - works retrieved (`id`s)
+
+First we check if the same papers are retrieved:.
+
+The following works are in `openalexR::oa_snowball()` but not in `openalexPro::pro_snowball()`:
+
+```{r}
+
+setdiff(snowballR$nodes$id, snowballPro_comp$nodes$id)
+```
+
+The following works are in `openalexR::oa_snowball()` but not in `openalexPro::pro_snowball()`:
+
+```{r}
+setdiff(snowballPro_comp$nodes$id, snowballR$nodes$id)
+```
+
+Both should be empty!
+
+### Edges
+
+#### Number of edges retrieved
+
+```{r}
+data.frame(
+  openalexR = nrow(snowballR$edges),
+  openalexPro = nrow(snowballPro_comp$edges),
+  difference = nrow(snowballR$edges) - nrow(snowballPro_comp$edges)
+) |>
+  knitr::kable()
+```
+
+The difference in the last colum should be the same.
+
+####
+
+#### Edges Identified
+
+```{r}
+snowballPro_comp_edges <- paste0(snowballPro_comp$edges$from, " -> ", snowballPro_comp$edges$to)
+snowballR_edges <- paste0(snowballR$edges$from, " -> ", snowballR$edges$to)
+```
+
+The following edges are in `openalexR::oa_snowball()` but not in `openalexPro::pro_snowball()`:
+
+```{r}
+
+setdiff(snowballR_edges, snowballPro_comp_edges)
+```
+
+The following works are in `openalexR::oa_snowball()` but not in `openalexPro::pro_snowball()`:
+
+```{r}
+setdiff(snowballPro_comp_edges, snowballR_edges)
 ```
