--- a/README.qmd
+++ b/README.qmd
@@ -51,7 +51,7 @@ Doe to the requirement of `openalexPro` to handle huge corpi with several millio
 
 The format which is used in this package is the `parquet` format which is small and very efficient in the retrieve=al of data (see https://parquet.apache.org/docs/ for a detailed description of the format).
 
-In addition, as a link between json files, the parquet dataset, and the retrieval of works from the dataset, the `duckdb` package is used. [DuckDB](https://duckdb.org) 'DuckDB is a fast in-process analytical database' as described on their database and it integrates peferfectly with `dplyr` pipelines. The functions here are `json_to_parquet()`
+In addition, as a link between json files, the parquet dataset, and the retrieval of works from the dataset, the `duckdb` package is used. [DuckDB](https://duckdb.org) 'DuckDB is a fast in-process analytical database' as described on their database and it integrates peferfectly with `dplyr` pipelines. The functions here are `source_to_parquet()`
 
 In the same light of efficiency, the conversion of the abstracts from the inverted index format returned by OpenAlex as well as the creation of short citations (Author, et al (2020)) is also done in `duckdb`. The functions here are `get_abstract()` and `get_abbreviated_authors()`
 
@@ -88,7 +88,7 @@ res <- oa_query(
     verbose = TRUE,
     json_dir = "json_files"
   ) |>
-  json_to_parquet(
+  source_to_parquet(
     corpus = "corpus"
   )
 ```
@@ -108,9 +108,8 @@ res <- oa_query(
   openalexPro::pro_request(
     verbose = TRUE
   ) |>
-  json_to_parquet(
-    corpus = "corpus",
-    delete_json = TRUE
+  source_to_parquet(
+    corpus = "corpus"
   )
 ```
 
@@ -119,7 +118,7 @@ res <- oa_query(
 ```{r}
 #| eval: false
 
-json_to_parquet(
+source_to_parquet(
   json_dir = "json_files",
   corpus = "corpus.parquet",
   partition = NULL
