--- a/vignettes/SnapshotUsage.qmd
+++ b/vignettes/SnapshotUsage.qmd
@@ -1,9 +1,12 @@
 ---
 title: "OpenAlex Data Snapshot Usage"
-format: 
-  html:
-    toc: true
-    embed-resources: true
+format:
+  pdf:
+    toc: false
+vignette: >
+  %\VignetteIndexEntry{Vignette's Title}
+  %\VignetteEngine{quarto::pdf}
+  %\VignetteEncoding{UTF-8}
 execute: 
   cache: false
 ---
