--- a/vignettes/Workflow.qmd
+++ b/vignettes/Workflow.qmd
@@ -5,7 +5,7 @@ format:
     toc: false
 vignette: >
   %\VignetteIndexEntry{Workflow using `openalexPro2`}
-  %\VignetteEngine{quarto::html=}
+  %\VignetteEngine{quarto::html}
   %\VignetteEncoding{UTF-8}
 execute: 
   cache: false
